--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,12 @@
 <app-nav-bar></app-nav-bar>
 
-<h1>Welcome to {{title}}</h1>
+<div class="container" style="margin-top: 140px">
+  <h1>Welcome to {{title}}</h1>
+  <ul>
+    <li class="list-unstyled" *ngFor="let product of products">
+      {{product.productName}}
+    </li>
+  </ul>
+</div>"
+
+
