--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -32,8 +32,12 @@
     <section class="col-9">
       <div class="d-flex justify-content-between align-items-center pb-2">
         <header>
-          <span>Vizualizati <strong>10</strong> din <strong>15</strong> rezultate</span>
+          <span>Vizualizati
+          <strong>
+            {{(this.shopParams.pageNumber-1) * this.shopParams.pageSize+1}} -
+            {{this.shopParams.pageNumber*this.shopParams.pageSize > this.totalCount ? this.totalCount: this.shopParams.pageNumber*this.shopParams.pageSize}}</strong> din <strong>{{this.totalCount}}</strong> rezultate</span>
         </header>
+
         <div class="form-inline mt-2">
           <input class="form-control mr-2" style="width:300px" placeholder="Cautare" type="text" />
           <button class="btn btn-outline-primary my-2">Cautare</button>
@@ -49,6 +53,8 @@
       <div class="d-flex justify-content-center">
         <pagination [boundaryLinks]="true"
                     [totalItems]="this.totalCount"
+                    (pageChanged)="onPageChanged($event)"
+                    [itemsPerPage] ="this.shopParams.pageSize"
                     previousText="&lsaquo;"
                     nextText="&rsaquo;"
                     firstText="&laquo;"
