--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -31,17 +31,17 @@
 
     <section class="col-9">
       <div class="d-flex justify-content-between align-items-center pb-2">
-        <header>
-          <span>Vizualizati
-          <strong>
-            {{(this.shopParams.pageNumber-1) * this.shopParams.pageSize+1}} -
-            {{this.shopParams.pageNumber*this.shopParams.pageSize > this.totalCount ? this.totalCount: this.shopParams.pageNumber*this.shopParams.pageSize}}</strong> din <strong>{{this.totalCount}}</strong> rezultate</span>
-        </header>
+
+        <app-paging-header>
+          [totalCount]="totalCount"
+          [pageSize]="this.shopParams.pageSize"
+          [pageNumber]="this.shopParams.pageNumber"
+        </app-paging-header>
 
         <div class="form-inline mt-2">
-          <input class="form-control mr-2" style="width:300px" placeholder="Cautare" type="text" />
-          <button class="btn btn-outline-primary my-2">Cautare</button>
-          <button class="btn btn-outline-secondary ml-2 my-2">Resetati</button>
+          <input (keyup.enter)="onSearch()" class="form-control mr-2" #search style="width:300px" placeholder="Cautare" type="text" />
+          <button (click)="onSearch()" class="btn btn-outline-primary my-2">Cautare</button>
+          <button (click)="onReset()" class="btn btn-outline-secondary ml-2 my-2">Resetati</button>
         </div>
       </div>
 
@@ -50,16 +50,12 @@
           <app-product-item [product]="product"></app-product-item>
         </div>
       </div>
-      <div class="d-flex justify-content-center">
-        <pagination [boundaryLinks]="true"
-                    [totalItems]="this.totalCount"
-                    (pageChanged)="onPageChanged($event)"
-                    [itemsPerPage] ="this.shopParams.pageSize"
-                    previousText="&lsaquo;"
-                    nextText="&rsaquo;"
-                    firstText="&laquo;"
-                    lastText="&raquo;">
-        </pagination>
+      <div class="d-flex justify-content-center" *ngIf="totalCount > 0 ">
+       <app-pager
+         [pageSize]="shopParams.pageSize"
+         [totalCount]="totalCount"
+         (pageChanged)="onPageChanged($event)">
+       </app-pager>
       </div>
      
     </section>
