Product details paga is functional on front-end

--- a/client/src/app/shared/components/paging-header/paging-header.component.html
+++ b/client/src/app/shared/components/paging-header/paging-header.component.html
@@ -6,5 +6,5 @@
       {{pageNumber*pageSize > this.totalCount ? this.totalCount: pageNumber * pageSize}}
     </strong> din <strong>{{this.totalCount}}</strong> rezultate
   </span>
-  <span *ngIf="totalCount ===0"> Nu exsita rezultate pentru filtrarea dvs</span>
+  <span *ngIf="totalCount ===0"> Nu exista rezultate pentru filtrarea dvs</span>
 </header>
