--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,32 +1,32 @@
-<div class="container mt-5">
+<div class="container mt-3">
   <div class="row">
     <section class="col-3">
+      <ng-container *ngIf="(types && brands)?.length">
+        <h5 class="text-warning ml-3 mt-4 mb-3">Sortare</h5>
+        <select class="custom-select mb-4" (change)="onSortSelected($any($event.target).value)">
+          <option *ngFor="let sort of sortOptions"
+                  [value]="sort.value">
+            {{sort.name}}
+          </option>
+        </select>
 
-      <h5 class="text-warning ml-3">Sortare</h5>
-      <select class="custom-select mb-3" (change)="onSortSelected($any($event.target).value)">
-        <option *ngFor="let sort of sortOptions"
-                [value]="sort.value">
-                {{sort.name}}</option>
-      </select>
+        <h5 class="text-warning ml-3">Branduri</h5>
+        <ul class="list-group my-3">
+          <li class="list-group-item"
+              *ngFor="let brand of brands"
+              [class.active]="brand.id===this.shopParams.brandId"
+              [value]="brand.id"
+              (click)="onBrandSelected(brand.id)">{{brand.name}}</li>
 
-      <h5 class="text-warning ml-3">Branduri</h5>
-      <ul class="list-group my-3">
-        <li class="list-group-item"
-            *ngFor="let brand of brands"
-            [class.active]="brand.id===this.shopParams.brandId"
-            [value]="brand.id"
-            (click)="onBrandSelected(brand.id)"
-            >{{brand.name}}</li>
-      
-      </ul>
-      <h5 class="text-warning ml-3">Tipuri</h5>
-      <ul class="list-group my-3">
-        <li class="list-group-item" *ngFor="let type of types"
-            [class.active]="type.id===this.shopParams.typeId"
-            [value]="type.id"
-            (click)="onTypeSelected(type.id)"
-            >{{type.name}}</li>
-      </ul>
+        </ul>
+        <h5 class="text-warning ml-3">Tipuri</h5>
+        <ul class="list-group my-3">
+          <li class="list-group-item" *ngFor="let type of types"
+              [class.active]="type.id===this.shopParams.typeId"
+              [value]="type.id"
+              (click)="onTypeSelected(type.id)">{{type.name}}</li>
+        </ul>
+      </ng-container>
     </section>
 
     <section class="col-9">
@@ -38,7 +38,7 @@
           [pageNumber]="this.shopParams.pageNumber"
         </app-paging-header>
 
-        <div class="form-inline mt-2">
+        <div class="form-inline" *ngIf="products">
           <input (keyup.enter)="onSearch()" class="form-control mr-2" #search style="width:300px" placeholder="Cautare" type="text" />
           <button (click)="onSearch()" class="btn btn-outline-primary my-2">Cautare</button>
           <button (click)="onReset()" class="btn btn-outline-secondary ml-2 my-2">Resetati</button>
