Add basket total in UI

--- a/client/src/app/basket/basket.component.html
+++ b/client/src/app/basket/basket.component.html
@@ -1,5 +1,5 @@
 
-<div class ="container mt-5">
+<div class ="container mt-2">
   <div *ngIf="(basket$ | async) === null">
     <a>There are no items in your basket</a>
   </div>
@@ -57,6 +57,14 @@
                 </tbody>
               </table>
             </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-6 offset-6">
+            <app-order-totals></app-order-totals>
+            <a routerLink="/checkout" class="btn btn-outline-primary py-2 btn-block">
+              Finalizare comanda
+            </a>
           </div>
         </div>
       </div>
