--- a/client/src/app/shared/components/text-input/text-input.component.html
+++ b/client/src/app/shared/components/text-input/text-input.component.html
@@ -1,1 +1,16 @@
-<p>text-input works!</p>
+<div class="form-label-group">
+  <input 
+         [ngClass]="(controlDir && controlDir.control &&  controlDir.control.touched) ? !controlDir.control.valid ? 'is-invalid' : 'is-valid' :''"
+         [type]="type"
+         (input)="onChange($any($event.target).value)"
+         (blur)="onTouched()"
+         id="{{label}}"
+         #input
+         class="form-control"
+         placeholder="{{label}}">
+  <label for="{{label}}">{{label}}</label>
+  <div class="invalid-feedback" *ngif="(controlDir && controlDir.control && !controlDir.control.valid && controlDir.control.touched)">
+    <span *ngif="controlDir.control.errors?.required">{{label}} is required</span>
+    <span *ngif="controlDir.control.errors?.pattern">Invalid email address</span>
+  </div>
+</div>
