--- a/client/src/app/shared/components/text-input/text-input.component.html
+++ b/client/src/app/shared/components/text-input/text-input.component.html
@@ -8,7 +8,7 @@
          #input
          class="form-control"
          placeholder="{{label}}">
-  <div *ngIf="controlDir && controlDir.control && controlDir.control.status==='PENDING'" class="fa fa-spineer fa-spin loader"> </div>
+  <div *ngIf="controlDir && controlDir.control && controlDir.control.status==='PENDING'" class="fa fa-spinner fa-spin loader"> </div>
   <label for="{{label}}">{{label}}</label>
   <div class="invalid-feedback" *ngIf="(controlDir && controlDir.control && !controlDir.control.valid && controlDir.control.touched)">
     <span *ngIf="controlDir.control?.errors?.required">{{label}} is required</span>
