--- a/client/src/app/checkout/checkout.component.html
+++ b/client/src/app/checkout/checkout.component.html
@@ -2,16 +2,16 @@
   <div class="row">
     <div class="col-8">
       <app-stepper [linearModeSelected]="false" #appStepper>
-        <cdk-step [label]="'Address'">
-          <app-checkout-address></app-checkout-address>
+        <cdk-step [label]="'Adresa'">
+          <app-checkout-address [checkoutForm]="checkoutForm"></app-checkout-address>
         </cdk-step>
-        <cdk-step [label]="'Delivery'">
-          <app-checkout-delivery></app-checkout-delivery>
+        <cdk-step [label]="'Livrare'">
+          <app-checkout-delivery [checkoutForm]="checkoutForm"></app-checkout-delivery>
         </cdk-step>
-        <cdk-step [label]="'Review'">
+        <cdk-step [label]="'Verificare'">
           <app-checkout-review></app-checkout-review>
         </cdk-step>
-        <cdk-step [label]="'Payment'">
+        <cdk-step [label]="'Plata'">
           <app-checkout-payment></app-checkout-payment>
         </cdk-step>
       </app-stepper>
