--- a/client/src/app/checkout/checkout-address/checkout-address.component.html
+++ b/client/src/app/checkout/checkout-address/checkout-address.component.html
@@ -26,3 +26,12 @@
 
   </div>
 </div>
+
+<div class="float-none d-flex justify-content-between flex-column flex-lg-row mb-5">
+  <button class="btn-outline-primary" routerLink="/basket">
+    <i class="fa fa-angle-left"></i>  Inapoi la cos
+  </button>
+  <button class="btn-primary" cdkStepperNext>
+    Catre livrare <i class="fa fa-angle-right"></i>
+  </button>
+</div>
