--- a/client/src/app/checkout/checkout-payment/checkout-payment.component.html
+++ b/client/src/app/checkout/checkout-payment/checkout-payment.component.html
@@ -1,1 +1,9 @@
 <p>checkout-payment works!</p>
+<div class="float-none d-flex justify-content-between flex-column flex-lg-row mb-5">
+  <button class="btn-outline-primary" cdkStepperPrevious>
+    <i class="fa fa-angle-left"></i>  Inapoi la verificare
+  </button>
+  <button class="btn-primary" cdkStepperNext>
+    Catre finalizare comanda <i class="fa fa-angle-right"></i>
+  </button>
+</div>
