--- a/client/src/app/checkout/checkout-review/checkout-review.component.html
+++ b/client/src/app/checkout/checkout-review/checkout-review.component.html
@@ -1,3 +1,12 @@
 <div class="mt-4">
   <app-basket-summary [isBasket]=false></app-basket-summary>
 </div>
+
+<div class="float-none d-flex justify-content-between flex-column flex-lg-row mb-5">
+  <button class="btn-outline-primary" cdkStepperPrevious>
+    <i class="fa fa-angle-left"></i>  Inapoi la Livrare
+  </button>
+  <button class="btn-primary" cdkStepperNext>
+    Catre plata <i class="fa fa-angle-right"></i>
+  </button>
+</div>
