--- a/client/src/app/checkout/checkout-address/checkout-address.component.html
+++ b/client/src/app/checkout/checkout-address/checkout-address.component.html
@@ -1,7 +1,9 @@
 <div class="mt-4" [formGroup]="checkoutForm">
   <div class="d-flex justify-content-between align-items-center">
     <h4>Adresa livrare</h4>
-    <button class="btn btn-outline-success mb-3"> Salvare ca adresa default</button>
+    <button (click)="saveUserAddress()"
+            [disabled]="!checkoutForm.get('addressForm').valid || !checkoutForm.get('addressForm').dirty"
+            class="btn btn-outline-success mb-3"> Salvare ca adresa default</button>
   </div>
   <div class="row" formGroupName="addressForm">
     <div class="form-group col-6">
