Order success confirmation

--- a/client/src/app/checkout/checkout-payment/checkout-payment.component.html
+++ b/client/src/app/checkout/checkout-payment/checkout-payment.component.html
@@ -3,7 +3,7 @@
   <button class="btn-outline-primary" cdkStepperPrevious>
     <i class="fa fa-angle-left"></i>  Inapoi la verificare
   </button>
-  <button class="btn-primary" cdkStepperNext>
+  <button class="btn btn-primary" (click)="submitOrder()">
     Catre finalizare comanda <i class="fa fa-angle-right"></i>
   </button>
 </div>
