--- a/client/src/app/checkout/checkout-success/checkout-success.component.html
+++ b/client/src/app/checkout/checkout-success/checkout-success.component.html
@@ -1,1 +1,6 @@
-<p>checkout-success works!</p>
+<div class="container mt-5">
+  <div><i class="fa fa-check-circle fa-5x" style="color:green"></i></div>
+  <h2>Multumim, Comanda dvs este confirmata</h2>
+  <p class="mb-4">Veti fi notificat in momentul in care comanda dvs a fost preluata de curier</p>
+  <button class="btn btn-outline-success">Vizualizati comanda plasata</button>
+</div>
