--- a/client/src/app/checkout/checkout.component.html
+++ b/client/src/app/checkout/checkout.component.html
@@ -11,8 +11,8 @@
         <cdk-step [label]="'Verificare'">
           <app-checkout-review></app-checkout-review>
         </cdk-step>
-        <cdk-step [label]="'Plata'">
-          <app-checkout-payment></app-checkout-payment>
+        <cdk-step [label]="'Plata'" >
+          <app-checkout-payment [checkoutForm]="checkoutForm"></app-checkout-payment>
         </cdk-step>
       </app-stepper>
     </div>
