Fix in orders and and review previous orders

--- a/client/src/app/orders/order-detailed/order-detailed.component.html
+++ b/client/src/app/orders/order-detailed/order-detailed.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="col-4">
       <app-order-totals
-                        [shippingPrice]="order.shippingPrince"
+                        [shippingPrice]="order.shippingPrice"
                         [subtotal]="order.subtotal"
                         [total]="order.total">
       </app-order-totals>
