--- a/client/src/app/checkout/checkout-review/checkout-review.component.html
+++ b/client/src/app/checkout/checkout-review/checkout-review.component.html
@@ -11,7 +11,7 @@
   <button class="btn-outline-primary" cdkStepperPrevious>
     <i class="fa fa-angle-left"></i>  Inapoi la Livrare
   </button>
-  <button class="btn-primary" cdkStepperNext>
+  <button class="btn-primary" (click)="createPaymentIntent()">
     Catre plata <i class="fa fa-angle-right"></i>
   </button>
 </div>
