--- a/client/src/app/checkout/checkout-delivery/checkout-delivery.component.html
+++ b/client/src/app/checkout/checkout-delivery/checkout-delivery.component.html
@@ -21,7 +21,7 @@
   <button class="btn-outline-primary" cdkStepperPrevious>
     <i class="fa fa-angle-left"></i>  Inapoi la Adresa
   </button>
-  <button class="btn-primary" cdkStepperNext>
+  <button [disabled]="checkoutForm.get('deliveryForm').invalid" class="btn-primary" cdkStepperNext>
     Catre verificare <i class="fa fa-angle-right"></i>
   </button>
 </div>
