--- a/client/src/app/checkout/checkout-payment/checkout-payment.component.html
+++ b/client/src/app/checkout/checkout-payment/checkout-payment.component.html
@@ -23,7 +23,11 @@
   <button class="btn-outline-primary" cdkStepperPrevious>
     <i class="fa fa-angle-left"></i>  Inapoi la verificare
   </button>
-  <button [disabled]="loading" class="btn btn-primary" (click)="submitOrder()">
+  <button [disabled]="loading
+          || checkoutForm.get('paymentForm').invalid
+          || !cardNumberValid
+          || !cardExpiryValid
+          || !cardCvcValid" class="btn btn-primary" (click)="submitOrder()">
     Catre finalizare comanda <i class="fa fa-angle-right"></i>
     <i *ngIf="loading" class="fa fa-spinner fa-spin"></i>
   </button>
