--- a/client/src/app/account/register/register.component.html
+++ b/client/src/app/account/register/register.component.html
@@ -2,12 +2,12 @@
   <div class="col-3">
     <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
       <div class="text-center mb-4">
-        <h1 class="h3 mb-3 font-weight-normal">Register</h1>
+        <h1 class="h3 mb-3 font-weight-normal">Inregistrare</h1>
       </div>
 
-      <app-text-input formControlName="displayName" [label]="'Display Name'"></app-text-input>
-      <app-text-input formControlName="email" [label]="'Email Address'"></app-text-input>
-      <app-text-input formControlName="password" [label]="'Password'" [type]="'password'"></app-text-input>
+      <app-text-input formControlName="displayName" [label]="'Nume afisat'"></app-text-input>
+      <app-text-input formControlName="email" [label]="'Adresa e-mail'"></app-text-input>
+      <app-text-input formControlName="password" [label]="'Parola'" [type]="'password'"></app-text-input>
 
       <ul class="text-danger list-unstyled" *ngIf="errors">
         <li *ngFor ="let error of errors">
@@ -18,7 +18,7 @@
 
 
 
-      <button  class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+      <button  class="btn btn-lg btn-primary btn-block" type="submit">Inregistrare</button>
     </form>
   </div>
 
