--- a/client/src/app/shared/components/text-input/text-input.component.html
+++ b/client/src/app/shared/components/text-input/text-input.component.html
@@ -11,12 +11,12 @@
   <div *ngIf="controlDir && controlDir.control && controlDir.control.status==='PENDING'" class="fa fa-spinner fa-spin loader"> </div>
   <label for="{{label}}">{{label}}</label>
   <div class="invalid-feedback" *ngIf="(controlDir && controlDir.control && !controlDir.control.valid && controlDir.control.touched)">
-    <span *ngIf="controlDir.control?.errors?.required">{{label}} is required</span>
-    <span *ngIf="controlDir.control?.errors?.pattern">Invalid email address</span>
+    <span *ngIf="controlDir.control?.errors?.required">{{label}} este necesara</span>
+    <span *ngIf="controlDir.control?.errors?.pattern">Adresa de email invalida</span>
     
   </div>
 
   <div class="invalid-feedback d-block" *ngIf="(controlDir && controlDir.control && !controlDir.control.valid && controlDir.control.dirty)">
-    <span *ngIf="controlDir.control.errors?.emailExists">Email address is in use</span>
+    <span *ngIf="controlDir.control.errors?.emailExists">Adresa de e-mail este utilzata deja</span>
   </div>
 </div>
