--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -1,8 +1,8 @@
-<div class="d-flex flex-column flex-md-row align-items-center justify-content-between p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-  <img src="assets/images/logo.png" style="max-height:150px;" alt="logo" class="logo" routerLink="/"/>
-  <nav class="my-2 my-md-0 mr-md-3 text-uppercase" style="font-size: larger;">
-    <a class="p-2" [routerLink] ="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Acasa</a>
-    <a class="p-2" routerLink ="/shop" routerLinkActive="active">Magazin</a>
+<div class="d-flex flex-column flex-md-row align-items-center justify-content-between p-2 px-md-2 mb-2 bg-white border-bottom shadow-sm">
+  <img src="assets/images/logo.png" style="max-height:100px;" alt="logo" class="logo" routerLink="/"/>
+  <nav class="my-2 my-md-0 mr-md-3 text-normal " style="font-size: larger;">
+    <a class="p-2 mr-2 rounded " style="background-color:#2fa4e7" [routerLink] ="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Acasa</a>
+    <a class="p-2 rounded " style="background-color:#2fa4e7" routerLink ="/shop" routerLinkActive="active">Magazin</a>
     <!-- <a class="p-2" routerLink ="/test-error" routerLinkActive="active">Errors</a> -->
   </nav>
   <div class="d-flex align-items-center">
