--- a/client/src/app/core/section-header/section-header.component.html
+++ b/client/src/app/core/section-header/section-header.component.html
@@ -1,11 +1,13 @@
 <ng-container *ngIf="(breadcrumb$ | async) as breadcrumbs">
-  <section *ngIf="breadcrumbs.length> 0 && breadcrumbs[breadcrumbs.length-1].label !=='Acasa' " class="py-5" style="margin-top: 105px; background-color: #f5f5f5;">
+  <section *ngIf="breadcrumbs.length> 0 && breadcrumbs[breadcrumbs.length-1].label !=='Acasa' " class="py-3" style="margin-top: 50px; background-color: #f5f5f5;">
     <div class="container">
-      <div class="row d-flex align-items-center">
-        <div class="col-9"></div>
-        <h1> {{breadcrumbs.length > 0 && breadcrumbs[breadcrumbs.length-1].label | titlecase }}  </h1>
+      <div class="row d-flex align-items-center justify-content-center">
+        <div class="col-9">
+          <h2> {{breadcrumbs.length > 0 && breadcrumbs[breadcrumbs.length-1].label | titlecase }} </h2>
+        </div>
+       
       </div>
-      <div class="col-3">
+      <div class="col-4">
         <xng-breadcrumb></xng-breadcrumb>
       </div>
     </div>
