--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,12 +1,12 @@
 <carousel>
   <slide>
-    <img src="assets/images/hero1.jpg" alt="first slide" style="display: block;  width:100%;" />
+    <img src="assets/images/hero1.jpg" alt="first slide" style="display: block; height: 452px ; width:100%;" />
   </slide>
   <slide>
-    <img src="assets/images/hero2.jpg" alt="second slide" style="display: block;  width:100%;" />
+    <img src="assets/images/hero2.jpg" alt="second slide" style="display: block; height:452px; width:100%;" />
   </slide>
   <slide>
-    <img src="assets/images/hero2.jpg" alt="third slide" style="display: block;  width:100%;" />
+    <img src="assets/images/hero3.jpg" alt="third slide" style="display: block; height: 452px;; width:100%;" />
   </slide>
 </carousel>
 <section class="featured">
@@ -19,15 +19,14 @@
   <div class="col" *ngFor="let type of types"
     [class.active]="type.id===this.shopParams.typeId"
               [value]="type.id"
-              (click)="btnClick()">
+              (click)="btnClick(type.id)">
     <div class="card shadow-sm">
-      <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em" >Thumbnail</text></svg>
-
+      <img src="assets/images/{{type.name}}Category.png"  style = "width:250px; height:auto">
       <div class="card-body">
         <p class="card-text"  >{{type.name}}</p>
       </div>
-      
     </div>
+    <br>
   </div>
  </div>
  </ng-container>
